Bug 876976 - Speed up array creation for global regexp matches. r=h4writer